@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-08T08:27:26Z",
+  "timestamp" : "2022-05-08T16:31:52Z",
   "count_outdated" : 116,
   "uniques_outdated" : 37,
-  "count" : 135,
+  "count" : 136,
   "uniques" : 54,
   "clones" : [
     {
@@ -70,8 +70,8 @@
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
+      "count": 5,
+      "count_minmax": [ 4, 5 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ]
     }
