@@ -1,5 +1,5 @@
 {
-  "count": 19,
+  "count": 20,
   "uniques": 8,
   "clones": [
     {
@@ -49,7 +49,7 @@
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 4,
+      "count": 5,
       "uniques": 3
     }
   ]
